@@ -112,6 +112,8 @@ function delete_event ($id_event, $similar = true) {
 		}
 	}
 	
+	$id_event = array_unique($id_event);
+
 	process_sql_begin ();
 	$errors = 0;
 	
@@ -163,7 +165,9 @@ function validate_event ($id_event, $similars = true, $comment = '', $new_status
 			$id_event = array_merge ($id_event, get_similar_events_ids ($id));
 		}
 	}
-	
+		
+	$id_event = array_unique($id_event);
+
 	process_sql_begin ();
 	$errors = 0;
 	
