@@ -1,3 +1,9 @@
+2011-06-15  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_events.php
+	operation/events/events_list.php: Fixed insertion
+	of repeated event comment
+
 2011-06-14  Sergio Martin <sergio.martin@artica.es>
 
 	* operation/events/events.php: Fixed typo to fix the bug of
